--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -65,6 +65,23 @@
   langid = {german}
 }
 
+@article{andersenAccuracyPrecisionManual2018,
+  title = {Accuracy and Precision of Manual Segmentation of the Maxillary Sinus in {{MR}} Images—a Method Study},
+  author = {Andersen, Tobias N and Darvann, Tron A and Murakami, Shumei and Larsen, Per and Senda, Yurie and Bilde, Anders and Buchwald, Christian V and Kreiborg, Sven},
+  date = {2018-05-01},
+  journaltitle = {The British Journal of Radiology},
+  volume = {91},
+  number = {1085},
+  pages = {20170663},
+  issn = {1748-880X},
+  doi = {10.1259/bjr.20170663},
+  url = {https://academic.oup.com/bjr/article/doi/10.1259/bjr.20170663/7449367},
+  urldate = {2024-11-12},
+  abstract = {Objective:               To assess the accuracy and precision of segmentation of the maxillary sinus in MR images to evaluate the potential usefulness of this modality in longitudinal studies of sinus development.                                         Methods:               A total of 15 healthy subjects who had been both craniofacial CT and MR scanned were included and the 30 maxillary sinus volumes were evaluated using segmentation. Two of the authors did segmentation of MRI and one of these authors did double segmentation. Agreement in results between CT and MRI as well as inter- and intraexaminer errors were evaluated by statistical and three-dimensional analysis.                                         Results:               The intraclass correlation coefficient for volume measurements for both method error, inter- and intraexaminer agreement were~\&gt;~0.9 [maximal 95\%\,confidence interval of 0.989–0.997, p \&lt; 0.001] and the limit of agreement for all parameters were~\&lt;~5.1\%. Segmentation errors were quantified in terms of overlap [Dice Coefficient (DICE)~\&gt; 0.9~=\,excellent agreement] and border distance [95\% percentile Hausdorff Distance (HD)~\&lt; 2\,mm~=~acceptable\,agreement]. The results were replicable and not influenced by systematic errors.                                         Conclusion:               We found a high accuracy and precision of manual segmentation of the maxillary sinus in MR images. The largest mean errors were found close to the orbit and the teeth.                                         Advances in knowledge:               MRI can be used for 3D models of the paranasal sinuses with equally good results as CT and allows longitudinal follow-up of sinus development.},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/Q3AT2HJN/Andersen et al. - 2018 - Accuracy and precision of manual segmentation of the maxillary sinus in MR images—a method study.pdf}
+}
+
 @article{arguelloComparisonSegmentationTools2019,
   title = {Comparison of Segmentation Tools for Structural Analysis of Bone Tissues by Finite Elements},
   author = {Argüello, D and Sánchez Acevedo, H G and González-Estrada, O A},
