--- a/includes/thesis/part02-chapter03-methods.tex
+++ b/includes/thesis/part02-chapter03-methods.tex
@@ -19,7 +19,7 @@ All nine datasets used in this study were acquired at the competence center for 
 The total body scans were performed on a Molecubes X-Cube \mct\space machine (Molecubes NV X-Cube, MOLECUBES NV, Gent, Belgium).
 The specimens were non contrast enhanced mice however, remnants of contrast agent could be seen in the vesica urinaria of all scanned animals.
 All scans were acquired with a tube voltage of 50\acrshort{kv} and a tube current exposure time product of 70\acrshort{mas}.
-Pixel spacing, the distance between the centers of neighboring pixels in the x/y-plane, was consistent across all scans with a distance of 0.1mm and the slice thickness was set to 0.1mm resulting in isotropic \glspl{vx}.\\
+Pixel spacing, the distance between the centers of neighboring pixels in the x/y-plane, was consistent across all scans with a distance of $0.1mm$ and the slice thickness was set to 0.1mm resulting in isotropic \glspl{vx}.\\
 A summary of all scan parameters can be seen in \cref{tab:scan-parameters}.
 \begin{table}
 	\begin{center}
@@ -313,7 +313,7 @@ with the help of the guide, segment the right shoulder joint.
 The testers then saved their work in a \acrfull{mrb} file and sent it back to the author.
 Segmentation analysis was performed by loading the segmented dataset of a tester and the reference segmentation dataset into 3D Slicer.
 And computing both \acrlong{dc} and \acrlong{hd} via the 3D Slicer extension \textit{SlicerRT}.
-All this was performed on a custom built computer from 2019,
+All this was performed on a custom-built computer from 2019,
 which was running Linux, for more information see: \cref{t:computer-specs}.
 Analysis results were stored in \acrfull{csv} files for further processing.
 
