--- a/includes/thesis/part03-page1-appendix.tex
+++ b/includes/thesis/part03-page1-appendix.tex
@@ -2,9 +2,10 @@
 \appendix
 
 \chapter{Appendix A: Segmentation guide}\label{a:guide}
-% TODO: reinclude appendix, deactivated now for speed
-%\includepdf[pages=-]{../guide/seg_guide_Rohrbacher_Stefan.pdf}
-\textbf{Appendix has been temporarily removed to reduce file size}
+\includepdf[
+scale=0.9,
+pages=-]{../guide/seg_guide_Rohrbacher_Stefan.pdf}
+%\textbf{Appendix has been temporarily removed to reduce file size}
 
 % \begin{figure}[h]
 % 	\centerline{
