--- a/thesis.tex
+++ b/thesis.tex
@@ -6,15 +6,10 @@
 \makeglossaries{}
 
 % show if something extends past margins
-\RequirePackage{showframe} % TODO
+%\RequirePackage{showframe} % TODO
 
 \input{includes/shared-preamble-acronyms}
 
-% this does not work for some reason
-% \fancyfoot{} % clear footer
-% \renewcommand{\headrulewidth}{0pt}
-% \fancyfoot[RE,RO]{\thepage} % page number always right
-% \pagestyle{fancy} % activate fancyhdr
 
 \begin{document}
 
