--- a/includes/thesis/part02-chapter01-introduction.tex
+++ b/includes/thesis/part02-chapter01-introduction.tex
@@ -46,7 +46,7 @@ The selection of the correct segmentation algorithm and workflow have a non-negl
 This thesis will explore potential segmentation workflows, as well as the creation of a guide for performing the mentioned segmentations.
 Additionally, the following research question will be answered:
 \begin{displayquote}
-	``Does the usage of a segmentation guide improve segmentation quality when used by inexperienced people?''
+	``Does the usage of a segmentation guide improve segmentation quality when used by inexperienced operators?''
 \end{displayquote}
 
 
