--- a/includes/thesis/part02-chapter05-conclusion.tex
+++ b/includes/thesis/part02-chapter05-conclusion.tex
@@ -23,8 +23,9 @@ Where the values shown in the tables reflect the difference of their segmentatio
 
 \section{Segmentation evaluation: Scapula}\label{s:seg-eval-scapula}
 As can be seen in \cref{tab:scapula-overlap} segmentation of the scapula with the guide improved in six out of seven testers.
-On average the segmentation overlap between the ground truth and test person's segmentation increased by $13.57\%$.
-Therefore, six out of seven testers seem to have benefited from reading the guide when tasked with segmenting a mouse scapula when comparing their performance using the \glsxtrlong{dc}.
+The mean values of the segmentation overlap between the ground truth and the test person's segmentation increased by $13.57\%$.
+Thus, six out of seven testers appeared to derive benefit from reading the guide when tasked with segmenting a 
+mouse scapula when comparing their performance using the \glsxtrlong{dc}.
 %-0.17, 0.45, 0.11, 0.02, 0.31, 0.09, 0.14 -> mean: 0.1357 -> +13.57\% (more overlap)\\
 \begin{table}[ht]
 	\begin{center}
@@ -46,9 +47,10 @@ Therefore, six out of seven testers seem to have benefited from reading the guid
 \end{table}
 
 \noindent
-As can be seen in \cref{tab:scapula-distance} segmentation of the scapula with the guide improved in five out of seven testers.
-On average the distance between segmentation borders between the ground truth and the test person segmentation decreased by $1.3085mm$.
-Therefore, five out of seven testers seem to have benefited from reading the guide when tasked with segmenting a mouse scapula when comparing their performance using the \glsxtrlong{hd}.
+As can be seen in \cref{tab:scapula-distance} segmentation of the scapula with the guide demonstrated enhanced outcomes in five out of seven testers.
+The mean distance between of the segmentation borders between the ground truth and the test person segmentation decreased by $1.3085mm$.
+Therefore, five out of seven testers seem to have benefited from reading the guide when tasked with segmenting a mouse scapula when 
+comparing their performance using the \glsxtrlong{hd}.
 %0.1155, 0.39, -0.1, -0.0084, -9.37, -0.0365, -0.15 -> mean: -1.3085mm (less distance)
 \begin{table}[ht]
 	\begin{center}
@@ -73,7 +75,8 @@ Therefore, five out of seven testers seem to have benefited from reading the gui
 \section{Segmentation evaluation: Clavicle}\label{s:seg-eval-clavicle}
 As can be seen in \cref{tab:clavicle-overlap} segmentation of the clavicle with the guide improved in five out of seven testers.
 On average the segmentation overlap between the ground truth and test person's segmentation increased by $17.82\%$.
-Therefore, five out of seven testers seem to have benefited from reading the guide when tasked with segmenting a mouse clavicle when comparing their performance using the \glsxtrlong{dc}.
+Therefore, five out of seven testers seem to have benefited from reading the guide when tasked with segmenting a mouse 
+clavicle, as compared to their performance using the \glsxtrlong{dc}.
 %-0.05, 0.32, -0.01, 0.01, 0.7478, 0.14, 0.09 -> mean: 0.1782 -> 17.82\%\\
 \begin{table}[ht]
 	\begin{center}
@@ -97,7 +100,8 @@ Therefore, five out of seven testers seem to have benefited from reading the gui
 \noindent
 As can be seen in \cref{tab:clavicle-distance} segmentation of the scapula with the guide improved in four out of seven testers.
 On average the distance between segmentation borders between the ground truth and the test person segmentation decreased by $1.029mm$.
-Therefore, four out of seven testers seem to have benefited from reading the guide when tasked with segmenting a mouse scapula when comparing their performance using the \glsxtrlong{hd}.
+Therefore, four out of seven testers seem to have benefited from reading the guide when tasked with segmenting a mouse scapula 
+when comparing their results using the \glsxtrlong{hd}.
 %0.027, 0.3, 0.04, -0.0042, -7.4751, -0.0615, -0.0318 -> mean: -1.02937mm
 \begin{table}[ht]
 	\begin{center}
@@ -122,8 +126,9 @@ Therefore, four out of seven testers seem to have benefited from reading the gui
 
 \section{Segmentation evaluation: Humerus}\label{s:seg-eval-humerus}
 As can be seen in \cref{tab:humerus-overlap} segmentation of the clavicle with the guide improved in six out of seven testers.
-On average the segmentation overlap between the ground truth and test person's segmentation increased by $17.71\%$.
-Therefore, six out of seven testers seem to have benefited from reading the guide when tasked with segmenting a mouse clavicle when comparing their performance using the \glsxtrlong{dc}.
+The mean value of the segmentation overlap between the ground truth and the test person's segmentation increased by $17.71\%$.
+Thus, six out of seven testers appeared to have benefited from reading the guide when tasked with segmenting a mouse 
+clavicle when comparing their performance using the \glsxtrlong{dc}.
 %-0.05, 0.69, -0.03, 0, 0.52, 0.08, 0.03 -> mean: 0.1771 -> 17.71\%\\
 \begin{table}[ht]
 	\begin{center}
@@ -147,7 +152,8 @@ Therefore, six out of seven testers seem to have benefited from reading the guid
 \noindent
 As can be seen in \cref{tab:humerus-distance} segmentation of the scapula with the guide improved in five out of seven testers.
 On average the distance between segmentation borders between the ground truth and the test person segmentation decreased by $2.382mm$.
-Therefore, five out of seven testers seem to have benefited from reading the guide when tasked with segmenting a mouse scapula when comparing their performance using the \glsxtrlong{hd}.
+Therefore, five out of seven testers seem to have benefited from reading the guide when tasked with segmenting a mouse scapula 
+when comparing their performance using the \glsxtrlong{hd}.
 %-0.17, 0.07, 0.0069, -0.0168, -16.4959, -0.0528, -0.0156 -> mean: -2.382mm
 \begin{table}[ht]
 	\begin{center}
@@ -169,17 +175,21 @@ Therefore, five out of seven testers seem to have benefited from reading the gui
 \end{table}
 
 \section{Interpretation and comparison with Literature}
-\Citeauthor{andersenAccuracyPrecisionManual2018} compared manual segmentation between MRI and CT scans of the same patients by different operators and defined the results via the \acrlong{dc} and \acrlong{hd}.
-They defined a \acrshort{dc} value of $0.9$ or $90\%$ as \textit{excellent agreement}.
-Furthermore, they defined a border distance (\acrshort{hd}) equal to 4 times the acquired voxel size as \textit{acceptable agreement} \cite{andersenAccuracyPrecisionManual2018}.
+In their study, \citeauthor{andersenAccuracyPrecisionManual2018} compared manual segmentation between MRI and CT scans of the same patients performed by 
+different operators and defined the results via the \acrfull{dc} and \acrfull{hd}.
+A \acrshort{dc} value of $0.9$ or $90\%$, was defined as \textit{excellent agreement} by the researchers.
+Moreover, they defined a border distance (\acrshort{hd}) equal to four times the acquired voxel size 
+as \textit{acceptable agreement} \cite{andersenAccuracyPrecisionManual2018}.
 In this study the author introduces the term of \textit{acceptable agreement} for the \acrshort{dc} for an overlap of $80\%$.
 
 \noindent
-Referring back to \cref{c:results}, \textit{excellent agreement} after reading the guide,
-according to the \acrlong{dc} was achieved by test person 4 for all tree anatomical structures,
+As indicated in \cref{c:results}, \textit{excellent agreement} after reading the guide,
+according to the \acrlong{dc} was achieved by several testers.
+Test person 4 for all tree anatomical structures,
 test person 6 for humerus segmentation
 and test person 7 for clavicle and humerus segmentation.
-Therefore, the highest agreement after reading the guide was achieved for humerus segmentation by $42.86\%$ of testers (see: \cref{tab:dc-excellent}).
+Accordingly, the highest level of agreement after reading the guide was attained for humerus segmentation 
+by $42.86\%$ of testers (see: \cref{tab:dc-excellent}).
 \begin{table}[ht]
 	\begin{center}
 		\begin{tabular}{l l l}
@@ -200,8 +210,9 @@ Therefore, the highest agreement after reading the guide was achieved for humeru
 \textit{Acceptable agreement} after reading the guide, according to the \acrshort{dc} was achieved by all testers for the humerus,
 testers 4, 5, 6, and 7 for the clavicle
 and testers 4 and 6 for the scapula.
-Therefore, the highest agreement after reading the guide was achieved for humerus segmentation by $100\%$ of testers (see: \cref{tab:dc-acceptable}).
-Second-highest agreement was achieved for clavicle segmentation by $57.15\%$ of testers.
+Consequently, the highest level of consensus after reading the guide was achieved for humerus segmentation with $100\%$ 
+of testers achieving full agreement (see: \cref{tab:dc-acceptable}).
+The second-highest level of agreement was achieved for clavicle segmentation by $57.15\%$ of testers.
 \begin{table}[ht]
 	\begin{center}
 		\begin{tabular}{l l l}
@@ -219,9 +230,10 @@ Second-highest agreement was achieved for clavicle segmentation by $57.15\%$ of 
 % scapula 1, 3, 4, 5, 6, 7
 % clavicle 1, 3, 4, 5, 6, 7
 % humerus 1, 3, 4, 5, 6, 7
-\textit{Acceptable agreement} after reading the guide, according to the \acrshort{hd} was achieved for all anatomical structures by six out of seven testers (see: \cref{tab:hd-acceptable}).
-The outlier being test person 2.
-Therefore, most testers achieved a high degree of agreement after reading the guide for all segmented structures.
+\textit{Acceptable agreement} after reading the guide, according to the \acrshort{hd} was achieved for all anatomical 
+structures by six out of seven testers (see: \cref{tab:hd-acceptable}).
+Test person 2 exhibited a discrepancy from the rest of the group.
+Consequently, the majority of testers demonstrated a high degree of agreement following the reading of the guide for all segmented structures.
 \begin{table}[ht]
 	\begin{center}
 		\begin{tabular}{l l l}
@@ -237,29 +249,33 @@ Therefore, most testers achieved a high degree of agreement after reading the gu
 
 
 \chapter{Conclusion and Limitations}\label{c:conclusion}
-The main goal of this thesis was to determine, whether inexperienced people facing a \mct\space segmentation task benefit from reading a guide beforehand.
-This is relevant because segmentation is an important step in quantitative image analysis studies.
-Giving researchers a head start in segmentation tasks would likely improve segmentation speed and accuracy.
-In this study, a guide, describing segmentation of mouse bone anatomy in \mct\space datsets, was created.
-The guide was handed out to testers with the task of performing segmentation without any help from the guide on 3 bones.
-And then repeating the task on the contralateral side with the help of the guide.
-The resulting segmentations were compared to a gold standard segmentation and analyzed.
-Due to the small sample size, it was not possible to show a significant statistical improvement of segmentations.
-However, the results indicate, that if this experiment were to be repeated with a large number of testers, segmentation accuracy improvements would be evident.
-In conclusion, this thesis failed to show statistical significant improvements due to a small sample size.
-Future research could however, reliably answer the research question of whether the usage of a segmentation guide improves segmentation quality when used by inexperienced people.
+The primary objective of this thesis was to investigate whether individuals with limited experience in micro-CT segmentation tasks may derive benefit from 
+the use of a guide or reference material prior to undertaking the task.
+This is a relevant topic of investigation because the process of segmentation represents a crucial step in the context of quantitative image analysis studies.
+Providing researchers with a head start in segmentation tasks is likely to result in improved segmentation speed and accuracy.
+In this study, a guide was created which describes the process of segmenting mouse bone anatomy in micro-CT datasets.
+The guide was distributed to the testers with the task of performing segmentation without any help from the guide on 3 bones.
+Subsequently, the task was repeated on the contralateral side with the aid of the guide.
+The resulting segmentations were then compared to a gold standard segmentation and analyzed.
+The limited sample size did not allow for a statistically significant demonstration of improvement in the segmentations. 
+However, the results suggest that a larger number of testers would likely show more notable enhancements in segmentation accuracy.
+In conclusion, the present study was unable to demonstrate statistically significant improvements due to the limited sample size. 
+Nevertheless, future research could provide a more definitive answer to the research question of whether the use of a 
+segmentation guide improves segmentation quality when employed by individuals with limited experience.
 
 
 \section*{Future Research}\label{c:future}
-This thesis provides a basis for future research in medical imaging segmentation documentation and guidance.
+This thesis provides a basis for future research in the area of medical imaging segmentation documentation and guidance.
 Further points of research can be inferred from the limitations described in \cref{c:conclusion}.\\
-First and foremost, as this paper only managed to gather results from a limited number\footnote{n=\numberofTesters} of testers, the issue with tester participation needs to be addressed in follow-up research.
+First and foremost, as this paper only managed to gather results from a limited number\footnote{n=\numberofTesters} of testers, 
+the challenge with tester participation needs to be addressed in follow-up research.
 This could be solved via the following steps.
-Firstly, allocating more time for testers to perform the task.
-And secondly, trying to engage more testes to start with.\\
-Secondly, the segmentation performance of different guide structures may be evaluated by strategic \textit{A/B testing} like described by \citeauthor{brataUserExperienceImprovement2020}.
-Whereby, testers are unknowingly divided into two groups.
+Firstly, it would be beneficial to allocate more time for testers to complete the task.
+Secondly, it would be beneficial to engage a greater number of testers from the outset.
+Secondly, the segmentation performance of different guide structures may be evaluated by strategic \textit{A/B testing} as 
+described by \citeauthor{brataUserExperienceImprovement2020}.
+Whereby, testers are divided into two groups without their knowledge.
 Version A of a guide is handed out to group A and version B of a guide is handed out to group B.
 By comparing the performance of the two groups, the performance of different guide formats can be indirectly evaluated.\\
 Furthermore, to ensure a consistent bone mask across all testing participants a fixed HU threshold range should be defined \cite{chavezGuidelinesMicroComputed2021}.\\
-Therefore, more research is needed to answer the research question, whether inexperienced users benefit from a segmentation guide.
+Therefore, additional research is required to answer the research question of whether inexperienced users benefit from a segmentation guide.
